doc: inverse module/jump link, and ensure that module without api are rendering well too.

--- a/doc/sources/.static/default.css
+++ b/doc/sources/.static/default.css
@@ -592,8 +592,11 @@ img.align-center {
 	border-bottom: 1px solid #cccccc;
 }
 
-.bodyshortcut.right {
+.right {
 	float: right;
+}
+.left {
+	float: left;
 }
 
 dl.class > dt.hover,
